# openai_helpers_piplines_package

./: .gitignore  AGENTS.md  README.md  TERMS_RELATIONS.md  demo.ipynb  draft guided thoughts.ipynb  draft.ipynb  openai_helpers_piplines_package.py  pipelines.md  pyproject.toml
helpers/: __init__.py  pydantic_helper.py
openai_helpers_piplines_package.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pipelines/: __init__.py  chat.py  json_fix.py  logger.py  loop_guard.py  session.py  tool.py
tests/: fake_chat.py  test_pipeline_exceptions.py
